--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "app.ts",
   "nodemonConfig": {
-    "ignore":
-      [
-        "**/*.test.ts",
-        "**/*.spec.ts",
-        ".git",
-        "node_modules"
-      ],
+    "ignore": [
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
+    ],
     "watch": [
       "src"
     ],
@@ -31,6 +30,7 @@
     "express": "^4.18.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.3.6",
+    "socket.io": "^4.5.1",
     "ts-node": "^10.8.1"
   },
   "devDependencies": {
