--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +49,10 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "typescript": "^4.7.3"
   }
 }
