--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
         "../../node_modules/@types"
     ]
   },
+  "include": [
+    "src/**/*"
+  ],
   "nodemonConfig": {
     "ignore": [
       "**/*.test.ts",
