--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     ]
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "node_modules/**/*"
   ],
   "nodemonConfig": {
     "ignore": [
