--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "outDir": "../dst/",
     "target": "ESNEXT",
     "typeRoots": [
-        "node_modules/@types"
+        "./node_modules/@types"
     ]
   },
   "include": [
