--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "outDir": "src",
     "target": "ESNEXT",
     "typeRoots": [
-        "./node_modules/@types"
+      "./node_modules/@types"
     ]
   },
   "include": [
@@ -54,7 +54,8 @@
     "mongodb": "^4.7.0",
     "mongoose": "^6.3.6",
     "socket.io": "^4.5.1",
-    "ts-node": "^10.8.1"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
