--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "index.js",
   "compilerOptions": {
     "allowJs": true,
     "checkJs": false,
@@ -37,6 +37,7 @@
     "npm": "7.x"
   },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon",
     "postinstall": "tsc",
