--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.ts",
+  "main": "index.js",
   "type": "module",
   "compilerOptions": {
     "allowJs": true,
@@ -33,11 +33,14 @@
     "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/app.ts",
     "ext": "ts, js"
   },
+  "engines": {
+    "node": "15.x",
+    "npm": "7.x"
+  },
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node .",
-    "start_dev": "nodemon",
+    "start": "nodemon",
     "postinstall": "tsc",
     "watch-ts": "tsc -w",
     "deploy": "git add . && git commit -m Heroku && git push heroku master"
