--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "start": "node src/app.ts",
     "postinstall": "tsc"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
