--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/app.ts",
+    "start": "node --loader ts-node/esm ./src/app.ts",
     "postinstall": "tsc"
   },
   "author": "",
