--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --loader ts-node/esm ./src/app.ts",
+    "start": "ts-node ./src/app.ts",
+    "heroku-postbuild": "webpack --mode production; tsc --project=tsconfig.json",
     "postinstall": "tsc"
   },
   "author": "",
