--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,11 @@
     "ext": "ts, js"
   },
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/app.ts",
-    "postinstall": "tsc"
+    "start": "node dist/index.js",
+    "postinstall": "tsc",
+    "watch-node": "nodemon dist/index.js",
+    "watch-ts": "tsc -w",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
   "types": "module",
   "author": "",
@@ -43,5 +44,6 @@
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.16",
     "tsconfig-paths": "^4.0.0"
-  }
+  },
+  "engines": { "node": "12.16.3" }
 }
