--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "ext": "ts, js"
   },
   "scripts": {
+    "build": "npx tsc",
     "start": "node dist/index.js",
     "postinstall": "tsc",
     "watch-node": "nodemon dist/index.js",
