--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "postinstall": "tsc",
     "watch-node": "nodemon dist/index.js",
     "watch-ts": "tsc -w",
-    "deploy": "git add . && git commit -m Heroku && git push heroku master"
+    "deploy": "git add . && git commit -m Heroku && cd .. && git subtree push --prefix server heroku main"
   },
   "author": "",
   "license": "ISC",
